# A660_C_Homework

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  main.h
GUI/: CloseEvents.c  CloseEvents.h  DataStruct.h  GAppMain.c  GAppMain.h  GUI_default.c  GUI_default.h  GUI_main.c  GUI_main.h  GoodManageWindow.c  LoginRegisterWindow.c  LoginRegisterWindow.h  MainWindow.c  MainWindow.h  ManageWindow.c  ManageWindow.h  MovieManageWindow.c  MovieManageWindow.h  UserManageWindow.c  button_floor1.c  button_floor1.h  button_floor2.c  button_floor2.h  button_floor3.c  button_floor3.h
GUI/GoodManage/: GoodManageWindow.c  GoodManageWindow.h
GUI/MovieManage/: MovieAddWindow.c  MovieAddWindow.h  MovieDelWindow.c  MovieDelWindow.h  MovieEditWindow.c  MovieEditWindow.h  MovieManageWindow.c  MovieManageWindow.h  MovieSearchWindow.c  MovieSearchWindow.h
GUI/UserManage/: UserManageWindow.h
base_toolkit/: CMakeLists.txt  list.c  list.h  vector.c  vector.h
css/: movie_table.css
manager/: good.c  good.h  movie.c  movie.h  movie_times.c  movie_times.h  store.c  store.h  users.c  users.h
ml/: YoloFaceDetector.c  YoloFaceDetector.h  cap_image.c  cap_image.h
model/: yolov7-lite-s.mapping  yolov7-lite-s.xml
